src/css/app.scss
// app global css in SCSS form
@font-face {
  font-family: FirstCoffee;
  src: url('/assets/fonts/FirstCoffee.otf') format("opentype");
  ascent-override: 120%;
}

// @see https://github.com/vuejs/core/issues/8409
* {
  transition-duration: 0s;
  animation-duration: 0s;
}

body {
  @extend .bg-kekwa;
}

body:not(.remove-font) {
  font-family: 'FirstCoffee', "Roboto", "-apple-system", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.main {
  margin: auto;
}

.index {
  margin: auto;

  min-width: 256px;
  max-width: 512px;
}

.center-image {
  background-repeat: no-repeat;
  background-size: auto 100%;
  background-position: center;
}

// bingo page
.gymbag-border {
  border-width: 2px;
  border-color: $gymbag;
  border-style: solid;
}

.bingo-card {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: repeat(7, 1fr);
  grid-column-gap: 0;
  grid-row-gap: 0;

  margin: auto;

  width: 1024px;
  height: 100%;

  background-color: red;

  user-select: none;

  .bingo-block {
    position: relative;
    background: white;

    min-height: 100px;
    min-width: 100px;

    font-size: 20px;
    line-height: 1.5rem;
    font-size-adjust: 0.75;

    transition: all 0.25s ease;

    @extend .gymbag-border;

    &:before {
      content: ' ';
      display: block;
      position: absolute;
      left: 0;
      top: 0;
      height: 100%;
      width: 100%;

      opacity: 0;
      transition: all 0.25s ease;

      @extend .center-image;
    }

    &.win {
      background-color: lighten($gymbag, 30%);
      color: white;

      span.bingo-block-text {
        color: white;
      }

      &:before:not(.free) {
        opacity: 0.1;
      }
    }

    &.active {
      &:before {
        opacity: 0.2;
      }
    }

    &.free {
      @extend .center-image;
    }

    &:not(.free) {
      cursor: pointer;
    }

    .bingo-tally {
      position: absolute;

      bottom: 0;
      right: 0;

      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-bottom-left-radius: 0;

      background-color: $gymbag;
      font-size: 15px;
      padding: 4px 2px 0px 4px;
    }

    .bingo-emotes {
      :not(:last-child) {
        margin-right: 5px;
      }
    }
  }
}

